Organização de codigos

--- a/MDN/CatAPP.html
+++ b/MDN/CatAPP.html
@@ -58,6 +58,7 @@
                 </fieldset>
 
                 <fieldset>
+                    <legend></legend>
                     <input>
                 </fieldset>
 
