--- a/MDN/Site do Cafe/CafeSite.html
+++ b/MDN/Site do Cafe/CafeSite.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Cafe Menu</title>
-        <link rel="stylesheet" href="Cafesite.css">
-    </head>
-    
-    <body>
-        
+
+<head>
+    <meta charset="utf-8" />
+    <title>Cafe Menu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div id="menu">
         <main>
             <h1>CAMPER CAFE</h1>
             <p>Est. 2020</p>
@@ -15,7 +16,7 @@
                 <h2>Coffee</h2>
             </section>
         </main>
-
-    </body>
+    </div>
+</body>
 
 </html>
